Changes to the html, new design intended

--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="stylesheet" href="styles/designs.css">
-
-<head>
-  <meta charset="utf-8">
-  <title>Personal Website</title>
+<meta charset="utf-8">
+<title>Personal Website</title>
 </head>
 
 <body>
+      <h1>Software Developer.</h1>
 
-<ul>
-  <li><a href="">Home</a></li>
-  <li><a href="">Projects/Articles</a></li>
-  <li><a href="">About</a></li>
-  <li><a href="">Contact</a></li>
-</ul>
+      <div class="navigation">
 
-<header>
- <center> <h1>Danish Hussain</h1> </center>
-</header>
+        <p>
+          <a href= "index.html" class = "Homepage">Home</a>
 
-    <h2>About Me</h2>
-    <p>I am currently a final year undergraduate at De Montfort University studying towards obtaining a BSC Computer Science (Hons) degree. My excellent communication and organisational skills, coupled with my desire to achieve highly, allowed me to secure a number of work experience placements. As a result, I was able to balance my professional development, whilst ensuring I excelled academically – achieving a First class during my first two years of university.</p>
+          <a href= "Projects.html" class = "Projects">Projects/Articles</a>
 
-    <p>My ability to self-evaluate and desire to continue my professional development, makes me well suited for a graduate position, given the transferable nature of my skill set. I am eager to exploit further opportunities and aim to pursue a career within the technology sector</p>
+          <a href= "About.html" class = "About">About</a>
 
-    <h2>About This Website</h2>
-    <p>This website is currently under development, more information to follow...</p>
+          <a href= "Contact.html" class = "Contact"> Contact</a>
+        </p>
 
-<p>Your visit time:</p>
-<p id="date"></p>   
-<footer>
-<p>Danish Hussain</p>
-<script>document.getElementById("date").innerHTML = Date(); </script>
-</footer>
+      </div>
 
-</body>
+    <div class="buttons">
+     <a href= "CV.html" class = "CV/Resume">CV/Resume</a>
+
+    </div>
+
+    <div id="footer">
+      <p>
+        © Danish Hussain 2017 - All Rights Reserved.
+      </p>
+    </div>
+
+  </body>
+
 </html>
