Minor colour changes and text positining

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
+  <div id="header">
       <h1>Software Developer.</h1>
+    </div>
 
       <div class="navigation">
 
@@ -23,8 +25,8 @@
       </div>
 
     <div class="buttons">
-     <a href= "CV.html" class = "CV/Resume">CV/Resume</a>
-
+     <a href= "CV.html" class = "CV">CV/Resume</a>
+     <a href= "Social.html" class = "Social">Social Websites</a>
     </div>
 
     <div id="footer">
