--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/designs.css">
+<link rel="stylesheet" href="styles/homepage.css">
 <meta charset="utf-8">
 <title>Personal Website</title>
 </head>
