Remaining pages added, with header and footer for each page

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/homepage.css">
+<link rel="stylesheet" href="styles/contact.css">
 <meta charset="utf-8">
 <title>Personal Website</title>
 </head>
 
 <body>
   <div id="header">
-      <h1>Software Developer</h1>
+      <h1></h1>
     </div>
 
       <div class="navigation">
@@ -24,11 +24,6 @@
 
       </div>
 
-    <div class="buttons">
-     <a href= "CV.html" class = "CV">CV/Resume</a>
-     <a href= "Social.html" class = "Social">Social Websites</a>
-    </div>
-
     <div id="footer">
       <p>
         © Danish Hussain 2017 - All Rights Reserved.
@@ -36,5 +31,3 @@
     </div>
 
   </body>
-
-</html>
