--- a/projects.html
+++ b/projects.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/homepage.css">
+<link rel="stylesheet" href="styles/projects.css">
 <meta charset="utf-8">
 <title>Personal Website</title>
 </head>
 
 <body>
   <div id="header">
-      <h1>Software Developer</h1>
+      <h1></h1>
     </div>
 
       <div class="navigation">
@@ -23,11 +23,6 @@
         </p>
 
       </div>
-
-    <div class="buttons">
-     <a href= "CV.html" class = "CV">CV/Resume</a>
-     <a href= "Social.html" class = "Social">Social Websites</a>
-    </div>
 
     <div id="footer">
       <p>
