--- a/contact.html
+++ b/contact.html
@@ -15,11 +15,11 @@
         <p>
           <a href= "index.html" class = "Homepage">Home</a>
 
-          <a href= "Projects.html" class = "Projects">Projects/Articles</a>
+          <a href= "projects.html" class = "Projects">Projects/Articles</a>
 
-          <a href= "About.html" class = "About">About</a>
+          <a href= "about.html" class = "About">About</a>
 
-          <a href= "Contact.html" class = "Contact"> Contact</a>
+          <a href= "contact.html" class = "Contact"> Contact</a>
         </p>
 
       </div>
