--- a/contact.html
+++ b/contact.html
@@ -6,23 +6,21 @@
 </head>
 
 <body>
-  <div id="header">
-      <h1></h1>
-    </div>
+   <ul class="navigation" id="myNav">
 
-      <div class="navigation">
+          <li><a href= "index.html" class = "HomeLink">Home</a></li>
 
-        <p>
-          <a href= "index.html" class = "Homepage">Home</a>
+          <li><a href= "projects.html">Projects/Articles</a></li>
 
-          <a href= "projects.html" class = "Projects">Projects/Articles</a>
+          <li><a href= "about.html">About</a></li>
 
-          <a href= "about.html" class = "About">About</a>
+          <li><a href= "contact.html"> Contact</a><li>
 
-          <a href= "contact.html" class = "Contact"> Contact</a>
-        </p>
+    <li class="icon">
+    <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+    </li>
 
-      </div>
+</ul>
 
     <div id="footer">
       <p>
