--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/contact.css">
-<meta charset="utf-8">
-<title>Personal Website</title>
+<head>
+  <meta charset="utf-8">
+  <title>Personal Website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/contact.css">
+  <script src="styles/styling.js"></script>
 </head>
-
 <body>
    <ul class="navigation" id="myNav">
 
