--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="styles/projects.css">
-<meta charset="utf-8">
-<title>Personal Website</title>
+<head>
+  <meta charset="utf-8">
+  <title>Personal Website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/projects.css">
+  <script src="styles/styling.js"></script>
 </head>
 
 <body>
