Second project added - also fixed a zooming issue

--- a/projects.html
+++ b/projects.html
@@ -30,11 +30,10 @@
 
    
  <header class="LightingSystem">
-    <h2>Automated Fuzzy Inference Lighting System</h2>
+    <h2>Automated Fuzzy Inference Lighting System Report</h2>
   </header>
 
     <div class="fuzzy-flipbook">
-  <div class="container">
     <div class="flipbook">
       <div style="background-image:url(projects/FuzzyReport/1.jpg)"></div>
       <div style="background-image:url(projects/FuzzyReport/2.jpg)"></div>
@@ -58,12 +57,38 @@
       <div style="background-image:url(projects/FuzzyReport/20.jpg)"></div>
     </div>
   </div>
-</div>
 
 
  <header class="FEReport">
     <h2>Front-End Web Development Report</h2>
   </header>
+
+
+    <div class="FE-flipbook">
+    <div class="flipbook1">
+      <div style="background-image:url(projects/FrontEnd/1.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/2.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/3.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/4.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/5.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/6.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/7.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/8.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/9.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/10.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/11.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/12.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/13.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/14.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/15.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/16.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/17.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/18.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/19.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/20.jpg)"></div>
+      <div style="background-image:url(projects/FrontEnd/21.jpg)"></div>
+    </div>
+  </div>
 
 
 <script type="text/javascript">
@@ -98,6 +123,7 @@ function loadApp() {
 
   });
 }
+
 
 
 // Load the HTML4 version if there's not CSS transform
