Variety of changes - IPhone support, buttons added, resizing adjustments, footer errors fixed.

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
   <script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
 </head>
-
+<div id="main-wrapper">
 <body>
     <ul class="navigation" id="myNav">
 
@@ -32,6 +32,8 @@
  <header class="LightingSystem">
     <h2>Automated Fuzzy Inference Lighting System Report</h2>
   </header>
+  
+  <a href="projects/FuzzyReport/LightSystem.pdf" class = "fuzzy">View</a>
 
     <div class="fuzzy-flipbook">
     <div class="flipbook">
@@ -113,7 +115,7 @@ function loadApp() {
    $('.flipbook1').turn({
 
       // Width
-      width:812,
+      width:822,
       
       //Height
       height:500,
@@ -140,15 +142,10 @@ yepnope({
 
 
 
-
- <div id="footer">
-      <p>
-        © Danish Hussain 2017 - All Rights Reserved.
-      </p>
-    </div>
-
-
-
+ <footer>
+        © Danish Hussain 2017 - All Rights Reserved.   
+</footer>
+</div>
   </body>
 
 </html>
