--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <ul class="navigation" id="myNav">
 
-          <li><a href= "index.html" class = "HomeLink">Home</a></li>
+          <li><a href= "index.html">Home</a></li>
 
           <li><a href= "projects.html">Projects/Articles</a></li>
 
