--- a/projects.html
+++ b/projects.html
@@ -3,99 +3,99 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Website</title>
-  <meta name="viewport" content="width = 1050, user-scalable = no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/projects.css">
   <script src="styles/styling.js"></script>
   <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
   <script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
 </head>
-<div id="main-wrapper">
-<body>
+
+  <body>
     <ul class="navigation" id="myNav">
 
-          <li><a href= "index.html" class = "HomeLink">Home</a></li>
+      <li><a href= "index.html" class = "HomeLink">Home</a></li>
 
-          <li><a href= "projects.html">Projects/Articles</a></li>
+      <li><a href= "projects.html">Projects/Articles</a></li>
 
-          <li><a href= "about.html">About</a></li>
+      <li><a href= "about.html">About</a></li>
 
-          <li><a href= "contact.html"> Contact</a><li>
+      <li><a href= "contact.html"> Contact</a><li>
 
-    <li class="icon">
-    <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
-    </li>
+        <li class="icon">
+          <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+        </li>
 
-</ul>
+      </ul>
 
+      <header class="LightingSystem">
+        <h2>Automated Fuzzy Inference Lighting System Report</h2>
+      </header>
 
-   
- <header class="LightingSystem">
-    <h2>Automated Fuzzy Inference Lighting System Report</h2>
-  </header>
-  
-  <a href="projects/FuzzyReport/LightSystem.pdf" class = "fuzzy">View</a>
+      <a href="projects/FuzzyReport/LightSystem.pdf" class = "fuzzy">View</a>
 
-    <div class="fuzzy-flipbook">
-    <div class="flipbook">
-      <div style="background-image:url(projects/FuzzyReport/1.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/2.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/3.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/4.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/5.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/6.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/7.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/8.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/9.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/10.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/11.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/12.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/13.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/14.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/15.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/16.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/17.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/18.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/19.jpg)"></div>
-      <div style="background-image:url(projects/FuzzyReport/20.jpg)"></div>
-    </div>
-  </div>
+      <div class="fuzzy-flipbook">
+        <div class="flipbook">
+          <div style="background-image:url(projects/FuzzyReport/1.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/2.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/3.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/4.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/5.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/6.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/7.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/8.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/9.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/10.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/11.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/12.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/13.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/14.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/15.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/16.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/17.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/18.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/19.jpg)"></div>
+          <div style="background-image:url(projects/FuzzyReport/20.jpg)"></div>
+        </div>
+      </div>
 
 
- <header class="FEReport">
-    <h2>Front-End Web Development Report</h2>
-  </header>
+      <header class="FEReport">
+        <h2>Front-End Web Development Report</h2>
+      </header>
+
+      <a href="projects/FrontEnd/FrontEnd.pdf" class = "fe">View</a>
+
+      <div class="FE-flipbook">
+        <div class="flipbook1">
+          <div style="background-image:url(projects/FrontEnd/1.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/2.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/3.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/4.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/5.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/6.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/7.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/8.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/9.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/10.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/11.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/12.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/13.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/14.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/15.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/16.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/17.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/18.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/19.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/20.jpg)"></div>
+          <div style="background-image:url(projects/FrontEnd/21.jpg)"></div>
+        </div>
+      </div>
 
 
-    <div class="FE-flipbook">
-    <div class="flipbook1">
-      <div style="background-image:url(projects/FrontEnd/1.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/2.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/3.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/4.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/5.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/6.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/7.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/8.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/9.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/10.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/11.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/12.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/13.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/14.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/15.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/16.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/17.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/18.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/19.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/20.jpg)"></div>
-      <div style="background-image:url(projects/FrontEnd/21.jpg)"></div>
-    </div>
-  </div>
+      <script type="text/javascript">
 
 
-<script type="text/javascript">
-
-function loadApp() {
+ function loadApp() {
 
   // Create the flipbook
 
@@ -121,11 +121,11 @@ function loadApp() {
       autoCenter: true
 
       
-     
 
-  });
 
-   $('.flipbook1').turn({
+    });
+
+  $('.flipbook1').turn({
 
       // Width
       width:700,
@@ -146,10 +146,10 @@ function loadApp() {
 
       autoCenter: true
 
-   
-  });
-}
 
+    });
+
+}
 
 
 // Load the HTML4 version if there's not CSS transform
@@ -167,9 +167,10 @@ yepnope({
 
 
 <footer>
-        © Danish Hussain 2017 - All Rights Reserved.   
+  © Danish Hussain 2017 - All Rights Reserved.   
 </footer>
-</div>
-  </body>
+
+
+</body>
 
 </html>
