All projects added, various styling and CV added

--- a/contact.html
+++ b/contact.html
@@ -8,26 +8,24 @@
   <script src="styles/styling.js"></script>
 </head>
 <body>
-   <ul class="navigation" id="myNav">
+ <ul class="navigation" id="myNav">
 
-          <li><a href= "index.html" class = "HomeLink">Home</a></li>
+  <li><a href= "index.html" class = "HomeLink">Home</a></li>
 
-          <li><a href= "projects.html">Projects/Articles</a></li>
+  <li><a href= "projects.html">Projects/Articles</a></li>
 
-          <li><a href= "about.html">About</a></li>
+  <li><a href= "about.html">About</a></li>
 
-          <li><a href= "contact.html"> Contact</a><li>
+  <li><a href= "contact.html"> Contact</a><li>
 
     <li class="icon">
-    <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+      <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
     </li>
 
-</ul>
+  </ul>
 
-    <div id="footer">
-      <p>
-        © Danish Hussain 2017 - All Rights Reserved.
-      </p>
-    </div>
+  <footer>
+    <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
+  </footer>
 
-  </body>
+</body>
