--- a/index.html
+++ b/index.html
@@ -11,43 +11,41 @@
 
 <body>
 
-   <header>
-    <h1>Software Developer</h1>
-  </header>
+ <header>
+  <h1>Software Developer</h1>
+</header>
+
 
 <ul class="navigation" id="myNav">
 
-          <li><a href= "index.html">Home</a></li>
+  <li><a href= "index.html">Home</a></li>
 
-          <li><a href= "projects.html">Projects/Articles</a></li>
+  <li><a href= "projects.html">Projects/Articles</a></li>
 
-          <li><a href= "about.html">About</a></li>
+  <li><a href= "about.html">About</a></li>
 
-          <li><a href= "contact.html"> Contact</a><li>
+  <li><a href= "contact.html"> Contact</a><li>
 
     <li class="icon">
-    <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+      <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
     </li>
 
-
-
 </ul>
-    
 
-    <div class="buttons">
-     <a href= "CV.html" class = "CV">CV/Resume</a>
-     <a href= "Social.html" class = "Social">Social Websites</a>
-    </div>
 
-    <div id="footer">
-      <p>
-        © Danish Hussain 2017 - All Rights Reserved.
-      </p>
-    </div>
+  <div class="buttons">
+   <a href= "extras/CV.pdf"  class = "CV">CV/Resume</a>
+   <a href= "Social.html" class = "Social">Social Life</a>
+ </div>
 
+
+<footer>
+  <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
+</footer>
 
 
 
-  </body>
+
+</body>
 
 </html>
