Added a social page, slideshow for pictures. New JS file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div class="buttons">
    <a href= "extras/CV.pdf"  class = "CV">CV/Resume</a>
-   <a href= "Social.html" class = "Social">Social Life</a>
+   <a href= "social.html" class = "Social">Social Life</a>
  </div>
 
 
