Social links added, slideshow resized.

--- a/social.html
+++ b/social.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="styles/slideshow.js"></script>
   <link type="text/css" rel="stylesheet" href="styles/social.css" />
   <link rel="stylesheet" href="extras/font-awesome-4.6.3/css/font-awesome.min.css">
- 
+
 </head>
 
 
@@ -27,20 +27,37 @@
         <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
       </li>
 
-   </ul>
+    </ul>
 
-<script>sliderTimer();</script>
-<div id="slider">
-    <div class="icon" id="left"><i class="fa fa-angle-left" onclick="prev()"></i></div>
-    <h2 id="sliderHeader">Travel Photography</h2>
-    <div class="icon" id="right"><i class="fa fa-angle-right" onclick="next()"></i></div>
-  </div>
+    <script>sliderTimer();</script>
+    <div id="slider">
+      <div class="icon" id="left"><i class="fa fa-angle-left" onclick="prev()"></i></div>
+      <div class="icon" id="right"><i class="fa fa-angle-right" onclick="next()"></i></div>
+      <h2 id="sliderHeader">Travel Photography</h2>
+    </div>
+
+
+    <header>
+      <h1>Find Out More About Me On...</h1>
+    </header>
+
+    <a href="https://www.facebook.com/danny.hussain.509">
+    <img src="images/facebook.jpg" alt="" id="fblogo">
+    </a>
+
+    <a href="https://uk.linkedin.com/in/danish-hussain-3b367212b">
+    <img src="images/linkedin.jpg" alt="" id="lilogo">
+    </a>
+
+    <a href="https://www.instagram.com/dannyhussain1/">
+    <img src="images/instagram.jpg" alt="" id="inlogo">
+    </a>
 
 
 
-  <footer>
-    <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
-  </footer>
+    <footer>
+      <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
+    </footer>
 
 
 
