Resizing sorted for social page, about page also added with animated text

--- a/about.html
+++ b/about.html
@@ -25,6 +25,12 @@
 
     </ul>
 
+    <p class = "animation">"Welcome to my website, my name is Danish Hussain I am a final year undergraduate at De Montfort University studying towards obtaining a BSC Computer Science (Hons) degree. My excellent communication</p>
+    <p class = "animation">and organisational skills, coupled with my desire to achieve highly, allowed me to secure a number of work experience placements. As a result, I was able to balance my professional development, whilst</p> 
+    <p class = "animation">ensuring I excelled academically – achieving a First class during my first two years of university. My ability to self-evaluate and desire to continue my professional development, makes me well suited </p>
+    <p class = "animation">for a graduate position, given the transferable nature of my skill set. I am eager to exploit further opportunities and aim to pursue a career within the technology sector. - Danish Hussain 2017"<span>|</span></p>
+
+
     <footer>
       <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
     </footer>
