--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Personal Website</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/homepage.css">
+  <script src="styles/styling.js"></script>
 </head>
 
 
