--- a/social.html
+++ b/social.html
@@ -5,6 +5,7 @@
   <title>Personal Website</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script type="text/javascript" src="styles/slideshow.js"></script>
+  <script src="styles/styling.js"></script>
   <link type="text/css" rel="stylesheet" href="styles/social.css" />
   <link rel="stylesheet" href="extras/font-awesome-4.6.3/css/font-awesome.min.css">
 
