Animation effected added for homepage

--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 
 <body>
 
- <header>
-  <h1>Software Developer</h1>
- </header>
-
-
 <ul class="navigation" id="myNav">
 
   <li><a href= "index.html">Home</a></li>
@@ -32,6 +27,7 @@
 
   </ul>
 
+  <p class="title typewriter">Software Developer</p>
 
   <div class="buttons">
    <a href= "extras/CV.pdf"  class = "CV">CV/Resume</a>
