Laptop support added for medium screens - comment changes

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
   </div>
 
   <footer>
-    <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
+    <p id = "footer">© Danish Hussain 2017 - All Rights Reserved.</p>   
   </footer>
 
 </body>
