Fixed all inspection issues, 405 Error also fixed.

--- a/about.html
+++ b/about.html
@@ -9,21 +9,23 @@
 </head>
 
 <body>
-  <ul class="navigation" id="myNav">
+  <header>
+    <ul class="navigation" id="myNav">
 
-    <li><a href= "index.html" class = "HomeLink">Home</a></li>
+      <li><a href= "index.html">Home</a></li>
 
-    <li><a href= "projects.html">Projects/Articles</a></li>
+      <li><a href= "projects.html">Projects/Articles</a></li>
 
-    <li><a href= "about.html">About</a></li>
+      <li><a href= "about.html">About</a></li>
 
-    <li><a href= "contact.html"> Contact</a><li>
+      <li><a href= "contact.html"> Contact</a><li>
 
-      <li class="icon">
-        <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
-      </li>
+        <li class="icon">
+          <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+        </li>
 
-    </ul>
+      </ul>
+    </header>
 
     <p class = "animation">Welcome to my website, my name is Danish Hussain I am a final year undergraduate at De Montfort University studying towards obtaining a BSC Computer Science (Hons) degree. </p>
     <p class = "animation">My excellent communication and organisational skills, coupled with my desire to achieve highly, allowed me to secure a number of work experience placements. As a result, I was able to balance my professional development.</p> 
