--- a/contact.html
+++ b/contact.html
@@ -9,22 +9,23 @@
 
 </head>
 <body>
- <ul class="navigation" id="myNav">
+ <header>
+  <ul class="navigation" id="myNav">
 
-  <li><a href= "index.html" class = "HomeLink">Home</a></li>
+    <li><a href= "index.html">Home</a></li>
 
-  <li><a href= "projects.html">Projects/Articles</a></li>
+    <li><a href= "projects.html">Projects/Articles</a></li>
 
-  <li><a href= "about.html">About</a></li>
+    <li><a href= "about.html">About</a></li>
 
-  <li><a href= "contact.html"> Contact</a><li>
+    <li><a href= "contact.html"> Contact</a><li>
 
-    <li class="icon">
-      <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
-    </li>
+      <li class="icon">
+        <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+      </li>
 
-  </ul>
-
+    </ul>
+  </header>
   <div id="wrapper">
 
     <h1>Contact Me</h1>
@@ -33,7 +34,7 @@
 
     <div id="contact">
 
-      <form method="post" action="extras/thanks.html">
+      <form method="post" action="thanks.html">
         <label for="Name">Name:</label>
         <input type="text" name="Name" id="Name" />
         
@@ -53,7 +54,7 @@
   </div>
 
   <footer>
-    <p id = "footer">© Danish Hussain 2017 - All Rights Reserved.</p>   
+    <p class = "text">© Danish Hussain 2017 - All Rights Reserved.</p>   
   </footer>
 
 </body>
