--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Personal Website</title>
-   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles/homepage.css">
   <script src="styles/styling.js"></script>
 </head>
@@ -11,33 +11,35 @@
 
 <body>
 
-<ul class="navigation" id="myNav">
+  <header>
+    <ul class="navigation" id="myNav">
 
-  <li><a href= "index.html">Home</a></li>
+      <li><a href= "index.html">Home</a></li>
 
-  <li><a href= "projects.html">Projects/Articles</a></li>
+      <li><a href= "projects.html">Projects/Articles</a></li>
 
-  <li><a href= "about.html">About</a></li>
+      <li><a href= "about.html">About</a></li>
 
-  <li><a href= "contact.html"> Contact</a><li>
+      <li><a href= "contact.html"> Contact</a><li>
 
-    <li class="icon">
-      <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
-    </li>
+        <li class="icon">
+          <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+        </li>
 
-  </ul>
+      </ul>
+    </header>
 
-  <p class="title typewriter">Software Developer</p>
+    <p class="title typewriter">Software Developer</p>
 
-  <div class="buttons">
-   <a href= "extras/CV.pdf"  class = "CV">CV/Resume</a>
-   <a href= "social.html" class = "Social">Social Life</a>
- </div>
+    <div class="buttons">
+     <a href= "extras/CV.pdf"  class = "CV">CV/Resume</a>
+     <a href= "social.html" class = "Social">Social Life</a>
+   </div>
 
 
- <footer>
-  <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
-</footer>
+   <footer>
+    <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
+  </footer>
 
 
 
