--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Thanks</title>
 	
-	<link rel="stylesheet" type="text/css" href="../styles/contact.css" />
+	<link rel="stylesheet" type="text/css" href="styles/contact.css" />
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	</div>
 
 	<div class = "return">
-	<p><a href="../contact.html">Back to Contact Form</a></p>
+	<p><a href="contact.html">Back to Contact Form</a></p>
 	</div>
 
 </body>
