--- a/social.html
+++ b/social.html
@@ -14,21 +14,23 @@
 
 <body>
 
-  <ul class="navigation" id="myNav">
+  <header>
+    <ul class="navigation" id="myNav">
 
-    <li><a href= "index.html">Home</a></li>
+      <li><a href= "index.html">Home</a></li>
 
-    <li><a href= "projects.html">Projects/Articles</a></li>
+      <li><a href= "projects.html">Projects/Articles</a></li>
 
-    <li><a href= "about.html">About</a></li>
+      <li><a href= "about.html">About</a></li>
 
-    <li><a href= "contact.html"> Contact</a><li>
+      <li><a href= "contact.html"> Contact</a><li>
 
-      <li class="icon">
-        <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
-      </li>
+        <li class="icon">
+          <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+        </li>
 
-    </ul>
+      </ul>
+    </header>
 
     <script>sliderTimer();</script>
     <div id="slider">
