--- a/social.html
+++ b/social.html
@@ -14,7 +14,6 @@
 
 <body>
 
-  
     <ul class="navigation" id="myNav">
 
       <li><a href= "index.html">Home</a></li>
@@ -30,7 +29,6 @@
         </li>
 
       </ul>
-    
 
     <script>sliderTimer();</script>
     <div id="slider">
@@ -58,9 +56,16 @@
 
 
 
-    <footer>
-      <p>© Danish Hussain 2017 - All Rights Reserved.</p>   
-    </footer>
+      <footer>
+    <p>© Danish Hussain 2017 - All Rights Reserved.</p>  
+    <p class = "validation">
+      <a href="http://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fmy.tech.dmu.ac.uk%2F%7Ep14181072%2FPersonalWebsite%2Fstyles%2Fsocial.css&profile=css3&usermedium=all&warning=1&vextwarning=">
+        <img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+      </a>
+    </p>
+  </footer>
 
 
 
